# fsis

./: .gitignore  123.cpp  CMakeLists.txt  CMakePresets.json  README.md  animgroups.ini  client.ini  forms.ini  resources.ini  services.ini
actors/: Actor.cpp  Actor.hpp  Character.cpp
components/: ActorComponent.cpp  ActorComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  SceneComponent.cpp  SceneComponent.hpp
core/: GameObject.cpp  GameObject.hpp  TransformTypes.hpp  World.cpp  World.hpp
resources/creatures/: enemy.json  fair.json  glowstone.json  obsidian.json  player.json  sculk.json  sterm.json
resources/map/: map.json
resources/textures/creatures/: fair_animation.json  glowstone_animation.json  obsidian_animation.json  player_animation.json  sculk_character.json  sterm_animation.json
resources/ui/: Authorization.txt  Control.txt  ESC.txt  Fight.txt  Menu.txt  Results.txt
src/engine/: Actors.hpp  CMakeLists.txt  Components.hpp  Controllers.hpp  Core.hpp  Engine.hpp  GUI.hpp  Render.hpp
src/engine/actors/: Actor.cpp  Actor.hpp  ActorGroups.hpp  Character.cpp  Character.hpp  Map.cpp  Map.hpp  README.md
src/engine/animation/: Animation.cpp  Animation.hpp
src/engine/components/: ActorComponent.cpp  ActorComponent.hpp  AudioComponent.cpp  AudioComponent.hpp  BoxComponent.cpp  BoxComponent.hpp  CharacterAnimComponent.cpp  CharacterAnimComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  PrimitiveComponent.cpp  PrimitiveComponent.hpp  README.md  RampComponent.cpp  RampComponent.hpp  SceneComponent.cpp  SceneComponent.hpp  SphereComponent.cpp  SphereComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp
src/engine/controllers/: AIController.cpp  AIController.hpp  Controller.cpp  Controller.hpp  PlayerController.cpp  PlayerController.hpp  README.md
src/engine/core/: AssetManager.cpp  AssetManager.hpp  CollisionResolver.cpp  CollisionResolver.hpp  CoreTypes.hpp  GameMode.cpp  GameMode.hpp  GameObject.cpp  GameObject.hpp  InputEventListener.cpp  InputEventListener.hpp  New.cpp  README.md  TransformTypes.hpp  World.cpp  World.hpp
src/engine/gui/: HUD.cpp  HUD.hpp  README.md
src/engine/network/: README.md
src/engine/render/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  FollowCamera.cpp  FollowCamera.hpp  README.md
src/fsis/: Achievement.hpp  CMakeLists.txt  ClientApplication.cpp  ClientApplication.hpp  Entity.hpp  FSISAction.hpp  FSISCharacter.cpp  FSISCharacter.hpp  FSISGameMode.cpp  FSISGameMode.hpp  FSISHUD.cpp  FSISHUD.hpp  Main.cpp  MatchStats.hpp  Monster.cpp  Monster.hpp  NetworkClient.cpp  NetworkClient.hpp  NetwotkClient.cpp  Projectile.cpp  Projectile.hpp  Sorcerer.cpp  Sorcerer.hpp
src/fsis/client/: NetworkClient.cpp  NetworkClient.hpp  README.md
src/fsis/patches/: cpr_clang_win32.patch
src/fsis/server/: NetworkServer.cpp  NetworkServer.hpp  README.md
src/fsis/states/: AuthState.cpp  AuthState.hpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  State.hpp  TotalState.cpp  TotalState.hpp
